--- a/css/styles.css
+++ b/css/styles.css
@@ -847,12 +847,23 @@ header {
   cursor: pointer;
   background: var(--white-color);
   border-radius: 50%;
-  border: 1px rgba(0, 0, 0, 0.1);
+  border: solid 1px rgba(0, 0, 0, 0.1);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  fill: var(--accent-color);
 }
 
 .icon-btn {
   width: 18px;
   height: 18px;
+  
+  
 }
 
 .modal-title {
@@ -975,6 +986,24 @@ label {
 .form-checkbox input:checked + label .checkbox {
   background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
+}
+
+.checkbox:hover {
+  background-color: var(--accent-color);
+  border: 2px solid var(--accent-color);
+
+  transition-property: background-color, border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:focus {
+  background-color: var(--accent-color);
+  border: 2px solid var(--accent-color);
+
+  transition-property: background-color, border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form .btn {
