--- a/css/styles.css
+++ b/css/styles.css
@@ -997,7 +997,7 @@ label {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:focus {
+.form-checkbox input:focus + label .checkbox {
   background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
 
